reserving space to fix visual shifting after loading.

--- a/css/large.css
+++ b/css/large.css
@@ -23,5 +23,7 @@ nav ul {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-    min-height: 400px;
+    min-height: 500px;
+    transition: all 0.3s ease-in-out;
   }
+  
